fixing the icons on project section being squished on smaller device and change button contact me on nav bar to email me

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -41,7 +41,7 @@
 }
 
 
-@media only screen and (min-width: 20rem) {
+@media only screen and (min-width: 25rem) {
   .project__icons {
 
     flex-direction: row;
